# learningopengl

./: CMakeLists.txt
src/: main.cpp
